<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hfad.mathquiz.GameActivity">

    <TextView
        android:id="@+id/progressView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/problemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/problem_example_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressView" />

    <com.hfad.mathquiz.views.BallView
        android:id="@+id/ballView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.hfad.mathquiz.views.NewScoreView
        android:id="@+id/newScoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_high_score_text"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/ballView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressView" />

    <com.hfad.mathquiz.views.AnswerView
        android:id="@+id/answerLeftView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_green_light"
        android:padding="5dp"
        android:text="@string/example_ans_text_one"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problemView"
        tools:text="Left Answer View" />

    <com.hfad.mathquiz.views.AnswerView
        android:id="@+id/answerRightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="72dp"
        android:background="@android:color/holo_green_light"
        android:padding="5dp"
        android:text="@string/example_ans_text_two"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problemView"
        tools:text="Right Answer View" />


</android.support.constraint.ConstraintLayout>